Apply access token to swagger
